[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.Test"
version = "0.0.1"
description = "Test Package"
readme = "README.md"
authors = [
    { name = "Virgil Bachtold", email = "virgil.bachtold@jaxlegalaid.org" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
